temporarily fixed page overflow by appling overflow-x:hidden to all div elements within the landing page. could pose an issue if we wanted a scrolling feature in the landing page

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -63,6 +63,11 @@
   font-style: normal;
 }
 
+div{
+    overflow-x: hidden;
+    overflow-y:hidden;
+}
+
 h1, textpath {
   font-family: 'Recoleta', sans-serif;
   font-size: 30px;
